[BUGFIX] add word wrap behavior for subnavigation items

--- a/felayout_t3kit/dev/styles/main/nav/subNavigation.less
+++ b/felayout_t3kit/dev/styles/main/nav/subNavigation.less
@@ -30,6 +30,9 @@
     border: 1px solid shade(@sub-navigation-border, 5%);
     border-width: 0 0 1px;
     font-size: 15px;
+    hyphens: auto;
+    // ie11 and edge hyphens polyfill
+    word-wrap: break-word;
 }
 
 @media (min-width: @screen-lg-min) {
